# OMM

./: .prettierignore  LICENSE.md  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml
src/: App.css  App.tsx  bindings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  steam.rs
src-tauri/src/steam/: mod.rs  models.rs
src-tauri/src/steam/platform/: windows.rs
src-tauri/src/utils/: mod.rs
src/components/ui/: button.tsx  dialog.tsx  popover.tsx  radio-group.tsx
src/components/welcome/: ErrorAlert.tsx  NavigationButtons.tsx  StepIndicator.tsx
src/routes/WelcomePage/: WelcomePage.tsx
src/stores/: useInitializedStore.ts
src/utils/: platformUtils.ts  store.ts
src/views/Dashboard/: CreateProfileDialog.tsx  Dashboard.tsx  ProfileCard.tsx  Sidebar.tsx
src/views/WelcomePage/: WelcomePage.tsx
src/views/WelcomePage/steps/: DirectoryStep.tsx  LibraryStep.tsx  SteamApiStep.tsx  VersionStep.tsx
